[package]
name = "scebpl-system"
version = "0.0.0"
authors = ["T. Post"]
description = "A crossplatform terminal library for manipulating terminals."
repository = "https://github.com/crossterm-rs/crossterm"
documentation = "https://docs.rs/crossterm/"
license = "MIT"
keywords = ["lsystem", "lindemayer", "grammar", "fractals", "recursion"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2021"
categories = ["science", "games"]

[dependencies]
macaw = "0.17.0"
regex = "1"
bytemuck = "1.10"
perchance = "0.5.0"

[dev-dependencies]
glow = "0.12.0"
egui = "0.21.0"
eframe = "0.21.0"
egui_glow = "0.21.0"